# Test-Python-yoko

./: .dockerignore  .gitignore  Dockerfile  README.md  Tests.postman_collection.json  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: .env  main.py
app/api/: api.py  deps.py
app/api/endpoints/: login.py  orders.py  stores.py  users.py  visits.py
app/core/: config.py
app/crud/: __init__.py  crud_client.py  crud_order.py  crud_store.py  crud_user.py  crud_visit.py  crud_worker.py
app/db/: base.py  init_db.py
app/models/: __init__.py  client.py  item.py  order.py  store.py  user.py  visit.py  worker.py
app/schemas/: __init__.py  client.py  order.py  store.py  user.py  visit.py  worker.py
scripts/: build.sh
terraform/: fast-api-app.tf  main.tf  postgres-database.tf
